# electronics-prototyping

./: .gitattributes  .gitignore  .gitmodules  README.md  digikey.py
backplane/: BD9E302EFJ-5V1.sch  backplane.kicad_pcb  backplane.pro  backplane.sch
fusesoc-workspace/: .gitattributes  .gitignore  Makefile  README.md  Taskfile.yml  bootblob.hex  init_workspace.sh  sd_emu_tb.gtkw  sim.tcl  sourceme.sh  spi_flash_ctrl_tb.gtkw
hat-psu/LMR14050SDDA_reference/: LMR14050.dcm  LMR14050SDDA_reference.kicad_pcb  LMR14050SDDA_reference.pro  LMR14050SDDA_reference.sch  LMR14050_5V1.sch  sym-lib-table
hat-psu/hat-psu/: BD9E302EFJ-5V1.sch  BD9E302EFJ_5V1.sch  BMC.sch  LMR14050_5V1.sch  Properties.sch  compute-sbc.sch  compute_sbc.sch  hat-psu.kicad_pcb  hat-psu.pro  hat-psu.sch  hat_psu.sch  ideal-diode.sch  ideal_diode.sch  racklet.lib  sym-lib-table
kicad-projects/hat-psu/: BD9E302EFJ_5V1.kicad_sch  BMC.kicad_sch  BMC.sch  Properties.kicad_sch  compute_sbc.kicad_sch  fp-lib-table  hat_psu.kicad_pcb  hat_psu.kicad_pro  hat_psu.kicad_sch  hat_psu.pro  ideal_diode.kicad_sch  sym-lib-table
kicad-projects/hatlet/: README.md  fp-lib-table  hatlet.kicad_pcb  hatlet.kicad_pro  hatlet.kicad_sch  sym-lib-table
kicad-projects/hatlet-dongle/: README.md  fp-lib-table  hatlet-dongle.kicad_pcb  hatlet-dongle.kicad_sch  sym-lib-table
kicad_evaluator/: Cargo.toml
kicad_evaluator/src/: main.rs  resolver.rs
kicad_parser/: Cargo.toml  out.yaml
kicad_parser/src/: main.rs  types.rs
sd-card-emulation/: Makefile  sd_emu.core
usb-hub/: usb-hub.kicad_pcb  usb-hub.pro  usb-hub.sch
(+78 files in other folders)
