[package]
name = "kicad_evaluator"
version = "0.1.0"
authors = ["Dennis Marttinen <twelho@welho.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kicad_parse_gen = { git = "https://github.com/productize/kicad-parse-gen", branch = "kicad5" }
evalexpr = "6.1"
