[package]
name = "kicad_parser"
version = "0.1.0"
authors = ["Lucas Käldström <lucas.kaldstrom@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
kicad_parse_gen = { git = "https://github.com/productize/kicad-parse-gen", branch = "kicad5" }
